Corrected challeng success icon with text alignment

--- a/mobile_console/src/main/webapp/css/gg_style.css
+++ b/mobile_console/src/main/webapp/css/gg_style.css
@@ -273,7 +273,7 @@
 	.image-bonus-success-num-small {
 		position: absolute;
 		top: 5px;
-		left: 53%;
+		left: 62%;
 		font-weight: bold;
 		font-size: 15px;
 		color: #fff;
@@ -282,7 +282,7 @@
 	.image-bonus-success-small {
 		position: absolute;
 		top: 20px;
-		left: 50%;
+		left: 59%;
 		font-weight: bold;
 		font-size: 11px;
 		line-height: 11px;
